# codex-proxy-rs

./: .gitkeep-init  Cargo.toml  README.md  flake.nix
.hermes/plans/: scaffold-codex-proxy-rs.md
docs/internal/decisions/: 001-typed-sse-event-models-and-loose-edge-payloads.md  002-sse-keepalive-guaranteed-termination-structured-returns.md  003-async-relay-design.md  004-http-server-and-k8s-credentials.md  005-otel-otlp-trace-export.md  006-conversation-scoped-state-account-affinity-and-reasoning-persistence.md  007-router-mode-account-affinity.md  008-subscription-usage-metrics.md
docs/internal/handoffs/: otel-otlp-phase1-plan.md  pr1-review-and-architecture.md
src/: affinity.rs  buffered.rs  config.rs  conversation.rs  lib.rs  main.rs  metrics.rs  model.rs  prompts.rs  ratelimit.rs  relay.rs  request.rs  router.rs  transform.rs  upstream.rs
src/credentials/: env.rs  fs.rs  mod.rs  oauth.rs  refresher.rs
src/prompts/: inverse_prompt.txt
src/server/: admin.rs  chat.rs  error.rs  middleware.rs  misc.rs  mod.rs  models.json  responses.rs  stream.rs
src/transform/: mod.rs  openai.rs  upstream.rs
tests/: buffered.rs  credentials_fs.rs  models_endpoint.rs  oauth_refresh.rs  relay.rs  request_transform.rs  router.rs  server_http.rs  transform_sse.rs
tests/support/: mod.rs
