[package]
name = "codex-proxy-rs"
version = "0.1.0"
edition = "2024"
description = "Rust scaffold for codex-proxy SSE transformer prototyping"
license = "MIT"
publish = false

[lib]
name = "codex_proxy_rs"
path = "src/lib.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "time"] }
uuid = { version = "1", features = ["v5"] }

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.26"
# Optional snapshot testing once parity work expands.
insta = "1"
tokio = { version = "1", features = ["io-util", "time", "macros", "rt", "test-util"] }

# Deferred full-port deps for later phases only:
# axum
# reqwest
# eventsource-stream
# tracing
# tracing-subscriber
# tracing-opentelemetry
# opentelemetry-otlp
# tokio-tungstenite
# keyring
# clap
# anyhow
# rand
# once_cell
