[package]
name = "codex-proxy-rs"
version = "0.1.0"
edition = "2024"
description = "Rust port of codex-proxy: OpenAI-compatible reverse proxy for the ChatGPT Codex backend"
license = "MIT"
publish = false

[lib]
name = "codex_proxy_rs"
path = "src/lib.rs"

[[bin]]
name = "codex-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = { version = "0.3", default-features = false }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "http2"] }
# Router-mode conversation→account affinity store. Plaintext in-cluster Redis
# (default-features off → no openssl); tokio + connection-manager match the
# existing async/rustls stack. See ADR 007.
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "v5"] }

# OpenTelemetry OTLP trace export (ADR 005). OTLP/HTTP over reqwest — no gRPC.
# Caret ranges lock the minor (the compatibility-matrix boundary); Cargo.lock
# freezes the exact patch set. Keep tracing-opentelemetry one minor ahead of the
# opentelemetry* crates (0.33 ↔ otel 0.32) — see ADR 005 §2.
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
opentelemetry-http = "0.32"
tracing-opentelemetry = "0.33"

# Prometheus metrics exporter for the `/metrics` endpoint (ADR 008; garden
# ADR 101). default-features off drops protobuf/process/pushgateway — the text
# exposition format (TextEncoder) is not feature-gated, and the pull-based
# `/metrics` path must not depend on the OTLP exporter being configured.
prometheus = { version = "0.14", default-features = false }

[dev-dependencies]
http = "1"  # HeaderMap in the inbound-propagation extraction test
http-body-util = "0.1"
pretty_assertions = "1"
rstest = "0.26"
# Optional snapshot testing once parity work expands.
insta = "1"
tokio = { version = "1", features = ["io-util", "time", "macros", "rt", "test-util"] }
tempfile = "3"
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }

# Deferred deps for later phases only:
# keyring (not planned — k8s-only credential modes)
# tokio-tungstenite (not planned — spark/WebSocket upstream dropped)
